--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#configure
+spring.datasource.url= jdbc:mysql://localhost:3306/signlanguage
+spring.datasource.username= root
+spring.datasource.password=
+#spring.datasource.url= jdbc:mysql://db4free.net:3306/signlanguage
+#spring.datasource.username= huyanhvu28
+#spring.datasource.password= 8thY#h!YL2tNea9
 
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+app.jwtSecret= huyanh
+app.jwtExpirationMs= 86400000
